kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-devops-nodeport-service
  labels:
    app: eks-devops
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort 
  selector:
    app: eks-devops
  ports:
    - port: 80
      targetPort: 80
