kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-externaldns-demo
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: externaldns-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2' 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:225989353406:certificate/4aab1fc4-7057-49c9-94b1-ba06225638c3 
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: eksdevops1.techsandeep.online, eksdevops2.techsandeep.online
spec:
  ingressClassName: my-aws-ingress-class  
  defaultBackend:
    service:
      name: eks-devops-nodeport-service
      port:
        number: 80
